--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Overview of changes in ayatana-greeter-badges 0.2
+
+  - data/badges/: Add alternative session names as symlinks.
+  - data/badges/: Add a symlink for each session badge without '_badge'
+    in the icon name (for slick-greeter, if they want it).
+
 Overview of changes in ayatana-greeter-badges 0.1
 
   - Initial release (factoring out greeter badges from
