--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
+2025-01-23 Mike Gabriel
+
+        * release 0.3 (HEAD -> main, tag: 0.3)
+        * data/badges/CMakeLists.txt: Include symlinked badges when
+          installing. (309b7243)
+
 2025-01-22 Mike Gabriel
 
-        * release 0.2 (HEAD -> main, tag: 0.2)
+        * release 0.2 (8f1bf719) (tag: 0.2)
         * data/badges/: Add a symlink for each session badge without '_badge'
           in the icon name (for slick-greeter, if they want it).
           (574acc7a)
