--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ayatana-greeter-badges (0.3) unstable; urgency=medium
+
+  * Upstream-provided Debian package for ayatana-greeter-badges.
+    See upstream ChangeLog for recent changes.
+
+ -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Thu, 23 Jan 2025 08:26:10 +0100
+
 ayatana-greeter-badges (0.2) unstable; urgency=medium
 
   * Upstream-provided Debian package for ayatana-greeter-badges.
